--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -38,15 +38,15 @@
 		</developer>
 	</developers>
 	<properties>
-		<spring.framework.version>4.0.2.RELEASE</spring.framework.version>
-		<spring.amqp.version>1.1.2.RELEASE</spring.amqp.version>
+		<spring.framework.version>4.0.4.RELEASE</spring.framework.version>
+		<spring.amqp.version>1.3.2.RELEASE</spring.amqp.version>
 		<junit.version>4.10</junit.version>
 		<bundlor.version>1.0.0.RELEASE</bundlor.version>
 		<maven.compiler.plugin>3.1</maven.compiler.plugin>
 		<dependency.locations.enabled>false</dependency.locations.enabled>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<compiler.target.version>1.6</compiler.target.version>
-		<compiler.source.version>1.6</compiler.source.version>
+		<compiler.target.version>1.7</compiler.target.version>
+		<compiler.source.version>1.7</compiler.source.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -383,12 +383,12 @@
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjrt</artifactId>
-				<version>1.5.4</version>
+				<version>1.8.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
-				<version>1.5.4</version>
+				<version>1.8.0</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
@@ -417,7 +417,7 @@
 			<dependency>
 				<groupId>org.codehaus.woodstox</groupId>
 				<artifactId>woodstox-core-asl</artifactId>
-				<version>4.0.6</version>
+				<version>4.2.0</version>
 				<optional>true</optional>
 				<exclusions>
 					<exclusion>
@@ -429,7 +429,7 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
-				<version>4.1.9.Final</version>
+				<version>4.2.12.Final</version>
 				<optional>true</optional>
 				<exclusions>
 					<exclusion>
@@ -453,7 +453,7 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-entitymanager</artifactId>
-				<version>4.1.9.Final</version>
+				<version>4.2.12.Final</version>
 				<optional>true</optional>
 				<exclusions>
 					<exclusion>
@@ -496,35 +496,35 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-	 			<version>1.6.6</version>
+	 			<version>1.7.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
-	 			<version>1.6.6</version>
+	 			<version>1.7.6</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
-				<version>PLEASE DON'T USE COMMONS LANG</version>
+				<version>2.6</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>1.4</version>
+				<version>2.4</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
-				<version>3.2</version>
+				<version>3.2.1</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
-				<version>1.2.2</version>
+				<version>1.4</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
@@ -536,19 +536,19 @@
 			<dependency>
 				<groupId>log4j</groupId>
 				<artifactId>log4j</artifactId>
-				<version>1.2.14</version>
+				<version>1.2.17</version>
 				<optional>true</optional>
 			</dependency>
             <dependency>
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>2.3.1</version>
+                <version>2.3.2</version>
                 <scope>test</scope>
             </dependency>
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.2.125</version>
+				<version>1.3.175</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -560,13 +560,13 @@
 			<dependency>
 				<groupId>org.apache.derby</groupId>
 				<artifactId>derby</artifactId>
-				<version>10.8.2.2</version>
+				<version>10.10.1.1</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
-				<version>1.4.4</version>
+				<version>1.4.7</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.jettison</groupId>
@@ -614,8 +614,8 @@
 			</dependency>
 			<dependency>
 				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
-				<version>2.5</version>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.0.1</version>
 				<scope>provided</scope>
 				<optional>true</optional>
 			</dependency>
@@ -736,37 +736,31 @@
 			<dependency>
 				 <groupId>org.springframework.data</groupId>
 				 <artifactId>spring-data-commons</artifactId>
-				 <version>1.5.0.RELEASE</version>
+				 <version>1.7.2.RELEASE</version>
 				 <optional>true</optional>
 			</dependency>
 	  		<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-jpa</artifactId>
-				<version>1.2.0.RELEASE</version>
+				<version>1.5.2.RELEASE</version>
 				<optional>true</optional>
 			</dependency>
 	 		<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-mongodb</artifactId>
-				<version>1.1.0.RELEASE</version>
+				<version>1.4.2.RELEASE</version>
 				 <optional>true</optional>
 			</dependency>
 	 		<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-neo4j</artifactId>
-				<version>2.2.0.RELEASE</version>
+				<version>3.0.2.RELEASE</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-gemfire</artifactId>
-				<version>1.3.0.RELEASE</version>
-				<optional>true</optional>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.data</groupId>
-				<artifactId>spring-data-redis</artifactId>
-				<version>1.0.3.RELEASE</version>
+				<version>1.3.4.RELEASE</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
