--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -52,14 +52,14 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.opensymphony.quartz</groupId>
+			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>1.6.1</version>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.6</version>
+			<version>5.1.29</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -100,12 +100,12 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
+			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>xmlunit</groupId>
 			<artifactId>xmlunit</artifactId>
-			<version>1.2</version>
+			<version>1.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -121,7 +121,13 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId>
-			<version>1.6.3</version>
+			<version>2.2.2</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-ant</artifactId>
+			<version>2.2.2</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -159,7 +165,7 @@
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.1-901.jdbc4</version>
+			<version>9.0-801.jdbc4</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -212,7 +218,7 @@
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>1.4.1</version>
+			<version>1.4.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
@@ -402,6 +408,14 @@
 			<id>gemstone</id>
 			<name>Release bundles for SQLFire and GemFire</name>
 			<url>http://dist.gemstone.com.s3.amazonaws.com/maven/release</url>
+		</repository>
+		<repository>
+			<id>libs-milestone</id>
+			<url>http://repo.spring.io/libs-milestone</url>
+		</repository>
+		<repository>
+			<id>plugins-release</id>
+			<url>http://repo.spring.io/plugins-release</url>
 		</repository>
 	</repositories>
 </project>
