--- a/spring-batch-infrastructure-tests/src/test/resources/batch-hsql.properties
+++ b/spring-batch-infrastructure-tests/src/test/resources/batch-hsql.properties
@@ -1,7 +1,7 @@
 # Placeholders batch.*
 #    for HSQLDB:
 batch.jdbc.driver=org.hsqldb.jdbcDriver
-batch.jdbc.url=jdbc:hsqldb:mem:testdb;sql.enforce_strict_size=true
+batch.jdbc.url=jdbc:hsqldb:mem:testdb;sql.enforce_strict_size=true;hsqldb.tx=mvcc
 # use this one for a separate server process so you can inspect the results
 # (or add it to system properties with -D to override at run time).
 # batch.jdbc.url=jdbc:hsqldb:hsql://localhost:9005/samples
