Updated to address TCK classpath

--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -60,7 +60,9 @@
 			<id>central</id>
 			<distributionManagement>
 				<snapshotRepository>
-					<id>sonatype-nexus-snapshots</id>
+					<id>
+
+						sonatype-nexus-snapshots</id>
 					<name>Sonatype Nexus Snapshots</name>
 					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
 				</snapshotRepository>
