Updated Spring Data versions for Spring I/O

--- a/build.gradle
+++ b/build.gradle
@@ -43,11 +43,11 @@ allprojects {
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.1.0.RC3'
 		springAmqpVersion = '1.3.2.RELEASE'
-		springDataCommonsVersion = '1.7.2.RELEASE'
-		springDataGemfireVersion = '1.3.4.RELEASE'
-		springDataJpaVersion = '1.5.2.RELEASE'
-		springDataMongodbVersion = '1.4.2.RELEASE'
-		springDataNeo4jVersion = '3.0.2.RELEASE'
+		springDataCommonsVersion = '1.8.0.RC1'
+		springDataGemfireVersion = '1.4.0.RC1'
+		springDataJpaVersion = '1.6.0.RC1'
+		springDataMongodbVersion = '1.5.0.RC1'
+		springDataNeo4jVersion = '3.1.0.RC1'
 		springIntegrationVersion = '4.0.0.RELEASE'
 		springLdapVersion = '2.0.1.RELEASE'
         springIoVersion = '1.0.0.BUILD-SNAPSHOT'
