BATCH-2234: Updated documentation to outline setup requirements as well as adding batch-*.properties files for the other database types

--- a/spring-batch-core/src/main/resources/batch-hsql.properties
+++ b/spring-batch-core/src/main/resources/batch-hsql.properties
@@ -17,3 +17,5 @@ batch.jdbc.validationQuery=
 
 # Non-platform dependent settings that you might like to change
 batch.data.source.init=true
+batch.table.prefix=BATCH_
+
