--- a/spring-batch-samples/src/main/resources/batch-h2.properties
+++ b/spring-batch-samples/src/main/resources/batch-h2.properties
@@ -16,3 +16,4 @@ batch.grid.size=2
 batch.jdbc.pool.size=6
 batch.verify.cursor.position=true
 batch.isolationlevel=ISOLATION_SERIALIZABLE
+batch.table.prefix=BATCH_
