--- a/spring-batch-samples/src/main/resources/batch-hsql.properties
+++ b/spring-batch-samples/src/main/resources/batch-hsql.properties
@@ -20,3 +20,4 @@ batch.grid.size=6
 batch.verify.cursor.position=true
 batch.isolationlevel=ISOLATION_SERIALIZABLE
 batch.data.source.init=true
+batch.table.prefix=BATCH_
