--- a/spring-batch-samples/src/main/resources/batch-mysql.properties
+++ b/spring-batch-samples/src/main/resources/batch-mysql.properties
@@ -16,4 +16,5 @@ batch.jdbc.pool.size=6
 batch.grid.size=50
 batch.verify.cursor.position=true
 batch.isolationlevel=ISOLATION_SERIALIZABLE
+batch.table.prefix=BATCH_
 
