--- a/spring-batch-samples/src/main/resources/batch-postgresql.properties
+++ b/spring-batch-samples/src/main/resources/batch-postgresql.properties
@@ -18,3 +18,4 @@ batch.grid.size=2
 batch.jdbc.pool.size=6
 batch.verify.cursor.position=false
 batch.isolationlevel=ISOLATION_SERIALIZABLE
+batch.table.prefix=BATCH_
