--- a/spring-batch-samples/src/main/resources/batch-sqlf.properties
+++ b/spring-batch-samples/src/main/resources/batch-sqlf.properties
@@ -20,3 +20,4 @@ batch.verify.cursor.position=false
 #add this for your jobRepository bean p:isolationLevelForCreate = "${batch.isolationlevel}"
 #see simple-job-launcher-context.xml for example
 batch.isolationlevel=ISOLATION_READ_COMMITTED
+batch.table.prefix=BATCH_
