--- a/spring-batch-samples/src/main/resources/batch-sybase.properties
+++ b/spring-batch-samples/src/main/resources/batch-sybase.properties
@@ -16,5 +16,6 @@ batch.jdbc.pool.size=6
 batch.grid.size=6
 batch.verify.cursor.position=true
 batch.isolationlevel=ISOLATION_SERIALIZABLE
+batch.table.prefix=BATCH_
 
 
