--- a/build.gradle
+++ b/build.gradle
@@ -41,15 +41,15 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '4.0.4.RELEASE'
+		springVersionDefault = '4.0.5.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.1.0.RC3'
-		springAmqpVersion = '1.3.2.RELEASE'
-		springDataCommonsVersion = '1.8.0.RC1'
-		springDataGemfireVersion = '1.4.0.RC1'
-		springDataJpaVersion = '1.6.0.RC1'
-		springDataMongodbVersion = '1.5.0.RC1'
-		springDataNeo4jVersion = '3.1.0.RC1'
+		springRetryVersion = '1.1.0.RELEASE'
+		springAmqpVersion = '1.3.3.RELEASE'
+		springDataCommonsVersion = '1.8.0.RELEASE'
+		springDataGemfireVersion = '1.4.0.RELEASE'
+		springDataJpaVersion = '1.6.0.RELEASE'
+		springDataMongodbVersion = '1.5.0.RELEASE'
+		springDataNeo4jVersion = '3.1.0.RELEASE'
 		springIntegrationVersion = '4.0.0.RELEASE'
 		springLdapVersion = '2.0.1.RELEASE'
 
