--- a/archetypes/simple-cli/pom.xml
+++ b/archetypes/simple-cli/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.batch</groupId>
     <artifactId>spring-batch-simple-cli</artifactId>
-    <version>2.2.7.RELEASE</version>
+    <version>2.2.8.BUILD-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Commandline</name>
     <description>This project is a command line batch sample from Spring Batch demonstrating a typical batch job.
@@ -14,7 +14,7 @@
     </description>
     <properties>
         <spring.framework.version>3.2.9.RELEASE</spring.framework.version>
-        <spring.batch.version>2.2.7.RELEASE</spring.batch.version>
+        <spring.batch.version>2.2.8.BUILD-SNAPSHOT</spring.batch.version>
         <dependency.locations.enabled>false</dependency.locations.enabled>
         <junit.version>4.10</junit.version>
         <compiler.target.version>1.6</compiler.target.version>
