--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -8,14 +8,14 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
-		<version>2.2.7.RELEASE</version>
+		<version>2.2.8.BUILD-SNAPSHOT</version>
 		<relativePath>../spring-batch-parent</relativePath>
 	</parent>
     <scm>
         <url>https://github.com/spring-projects/spring-batch</url>
         <connection>scm:git:git://github.com/spring-projects/spring-batch.git</connection>
         <developerConnection>scm:git:git://github.com/spring-projects/spring-batch.git</developerConnection>
-        <tag>2.2.7.RELEASE</tag>
+        <tag>HEAD</tag>
     </scm>
 	<dependencies>
 		<dependency>
