--- a/build.gradle
+++ b/build.gradle
@@ -46,13 +46,14 @@ allprojects {
 		springRetryVersion = '1.1.0.RELEASE'
 		springAmqpVersion = '1.3.3.RELEASE'
 		springDataCommonsVersion = '1.8.0.RELEASE'
+		springDataElasticsearchVersion = '1.0.1.RELEASE'
 		springDataGemfireVersion = '1.4.0.RELEASE'
 		springDataJpaVersion = '1.6.0.RELEASE'
 		springDataMongodbVersion = '1.5.0.RELEASE'
 		springDataNeo4jVersion = '3.1.0.RELEASE'
 		springIntegrationVersion = '4.0.1.RELEASE'
 		springLdapVersion = '2.0.2.RELEASE'
-
+		
 		activemqVersion = '5.9.1'
 		aspectjVersion = '1.8.0'
 		castorVersion = '1.3.2'
@@ -316,6 +317,7 @@ project('spring-batch-infrastructure') {
 		optional "org.springframework:spring-orm:$springVersion"
 		optional "org.springframework:spring-tx:$springVersion"
 		optional "org.springframework.data:spring-data-commons:$springDataCommonsVersion"
+		optional "org.springframework.data:spring-data-elasticsearch:$springDataElasticsearchVersion"
 		optional "org.springframework.data:spring-data-mongodb:$springDataMongodbVersion"
 		optional "org.springframework.data:spring-data-neo4j:$springDataNeo4jVersion"
 		optional "org.springframework.data:spring-data-gemfire:$springDataGemfireVersion"
