BATCH-2359: fix for the problem that job arguments defined after an empty line are ignored

--- a/build.gradle
+++ b/build.gradle
@@ -156,9 +156,9 @@ subprojects { subproject ->
 			destinationFile = file("$buildDir/jacoco.exec")
 		}
 
-		testLogging {
-			showStandardStreams = true
-		}
+//		testLogging {
+//			showStandardStreams = true
+//		}
 	}
 
 	task sourcesJar(type: Jar) {
